Prevent overflow in article container (#226)
* prevent overflowing of article box

* removing static hight from iframe css

--- a/apps/app-article/src/index.css
+++ b/apps/app-article/src/index.css
@@ -441,5 +441,8 @@ body {
 
 .html iframe {
     width: 100%;
-    height:196px;
+}
+
+.container-fluid.article {
+    overflow-x: hidden;
 }
